@@ -17,12 +17,15 @@ import org.apache.commons.codec.binary.Base64;
 import org.fhir.ucum.UcumEssenceService;
 import org.hl7.fhir.r5.context.IWorkerContext;
 import org.hl7.fhir.r5.context.SimpleWorkerContext;
+import org.hl7.fhir.r5.context.TerminologyCache;
 import org.hl7.fhir.r5.model.Parameters;
 import org.hl7.fhir.utilities.CSFile;
 import org.hl7.fhir.utilities.TextFile;
+import org.hl7.fhir.utilities.ToolGlobalSettings;
 import org.hl7.fhir.utilities.Utilities;
 import org.hl7.fhir.utilities.VersionUtilities;
 import org.hl7.fhir.utilities.npm.FilesystemPackageCacheManager;
+import org.hl7.fhir.utilities.npm.NpmPackage;
 import org.hl7.fhir.utilities.npm.ToolsVersion;
 import org.hl7.fhir.utilities.tests.BaseTestingUtilities;
 import org.w3c.dom.Document;
@@ -89,7 +92,7 @@ public class TestingUtilities extends BaseTestingUtilities {
       FilesystemPackageCacheManager pcm;
       try {
         pcm = new FilesystemPackageCacheManager(true, ToolsVersion.TOOLS_VERSION);
-        IWorkerContext fcontext = SimpleWorkerContext.fromPackage(pcm.loadPackage(VersionUtilities.packageForVersion(version), version));
+        IWorkerContext fcontext = getWorkerContext(pcm.loadPackage(VersionUtilities.packageForVersion(version), version));
         fcontext.setUcumService(new UcumEssenceService(TestingUtilities.loadTestResourceStream("ucum", "ucum-essence.xml")));
         fcontext.setExpansionProfile(new Parameters());
 //        ((SimpleWorkerContext) fcontext).connectToTSServer(new TerminologyClientR5("http://tx.fhir.org/r4"), null);
@@ -100,6 +103,18 @@ public class TestingUtilities extends BaseTestingUtilities {
       }
     }
     return fcontexts.get(v);
+  }
+
+  public static SimpleWorkerContext getWorkerContext(NpmPackage npmPackage) throws Exception {
+    SimpleWorkerContext swc = new SimpleWorkerContext.SimpleWorkerContextBuilder().withUserAgent(TestConstants.USER_AGENT).withTerminologyCachePath(TestConstants.TX_CACHE).fromPackage(npmPackage);
+    TerminologyCache.setCacheErrors(true);
+    return swc;
+  }
+
+  public static SimpleWorkerContext getWorkerContext(NpmPackage npmPackage, IWorkerContext.IContextResourceLoader loader) throws Exception {
+    SimpleWorkerContext swc = new SimpleWorkerContext.SimpleWorkerContextBuilder().withUserAgent(TestConstants.USER_AGENT).withTerminologyCachePath(TestConstants.TX_CACHE).fromPackage(npmPackage, loader);
+    TerminologyCache.setCacheErrors(true);
+    return swc;
   }
 
   static public String fixedpath;
@@ -150,14 +165,10 @@ public class TestingUtilities extends BaseTestingUtilities {
   public static String checkXMLIsSame(String f1, String f2) throws Exception {
     String result = compareXml(f1, f2);
     if (result != null && SHOW_DIFF) {
-      String diff = Utilities.path(System.getenv("ProgramFiles"), "WinMerge", "WinMergeU.exe");
-      if (new File(diff).exists()) {
+      String diff = ToolGlobalSettings.hasComparePath() ? ToolGlobalSettings.getComparePath() : Utilities.path(System.getenv("ProgramFiles"), "WinMerge", "WinMergeU.exe");
+      if (new File(diff).exists() || Utilities.isToken(diff)) {
         List<String> command = new ArrayList<String>();
-        command.add("\"" + diff + "\" \"" + f1 + "\" \"" + f2 + "\"");
-
-        ProcessBuilder builder = new ProcessBuilder(command);
-        builder.directory(new CSFile("c:\\temp"));
-        builder.start();
+        Process p = Runtime.getRuntime().exec(new String[]{diff, f1, f2});
       }
     }
     return result;
@@ -476,6 +487,8 @@ public class TestingUtilities extends BaseTestingUtilities {
       String path = Utilities.path("C:\\temp", name);
       Utilities.createDirectory(path);
       return path;
+    } else if (ToolGlobalSettings.hasTempPath()) {
+      return ToolGlobalSettings.getTempPath();
     } else if (new File("/tmp").exists()) {
       String path = Utilities.path("/tmp", name);
       Utilities.createDirectory(path);
